@@ -89,6 +89,14 @@ Build
 
 - Issue #23585: make patchcheck will ensure the interpreter is built.
 
+Tools/Demos
+-----------
+
+- Issue #22826: The result of open() in Tools/freeze/bkfile.py is now better
+  compatible with regular files (in particular it now supports the context
+  management protocol).
+
+
 What's New in Python 3.5 alpha 2?
 =================================
 
